# sample-innovation-patterns

./: .env.example  .gitignore  .gitlab-ci.yml  .graphifyignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  buildspec.yml  cliff.toml  package-lock.json
app-lib/: .env.example  .gitignore  .graphifyignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
app-lib/notebooks/: README.md
app-lib/notebooks/examples/: hello-app-lib.ipynb
app-lib/notebooks/users/: README.md
app-lib/scripts/: version.py
app-lib/src/app_lib/: __init__.py  main.py
app-lib/src/app_lib/common/: CLAUDE.md  Makefile  app.py  auth.py
app-lib/src/app_lib/common/data/: abstract_data_service.py
app-lib/src/app_lib/common/lambda/: api_lambda_handler.py  lambda_handler.py  s3_handler.py  sqs_handler.py
app-lib/src/app_lib/common/service/: __init__.py
app-lib/src/app_lib/common/util/: jinja_util.py  observability.py  path_util.py  pynamodb_util.py
app-lib/src/app_lib/features/: CLAUDE.md
app-lib/src/app_lib/features/fibonacci/: __init__.py
app-lib/src/app_lib/model/: README.md
app-lib/src/app_lib/model/ddb/: CLAUDE.md  (+2 more)
app-lib/src/app_lib/patterns/: CLAUDE.md
app-lib/src/app_lib/rest/: CLAUDE.md  Makefile  README.md  app.py  auth.py
app-lib/src/app_lib/service/: README.md
app-lib/src/app_lib/util/: CLAUDE.md  README.md  load_dynamodb_util.py  observability.py  path_util.py
app-lib/tests/: CLAUDE.md  Makefile  conftest.py  test_basic.py
app-lib/tests/common/util/: test_observability.py  test_path_util.py  test_pynamodb_util.py
app-lib/tests/features/fibonacci/: __init__.py  test_fibonacci_data_service.py  test_fibonacci_routes.py  test_fibonacci_table.py
app-lib/tests/features/inference/: __init__.py  test_inference_sse_routes.py
app-lib/tests/features/jobs/: __init__.py  test_job_data_service.py  test_job_routes.py  test_job_table.py
app-lib/tests/features/passengers/: test_load_dynamodb_util.py  test_passenger_data_service.py  test_passenger_table.py
app-lib/tests/features/state/: __init__.py  test_state_data_service.py  test_state_routes.py  test_state_table.py
app-lib/tests/model/ddb/: test_ddb_titanic_passenger_table.py
app-lib/tests/unit/util/: test_load_dynamodb_util.py  test_observability.py
app-lib/tests/util/: test_path_util.py  test_pynamodb_util.py
utils/: CLAUDE.md  README.md  pyproject.toml
utils/ipa_utils/: __init__.py
utils/ipa_utils/aws/: __init__.py  cfn_template.py  cloudformation.py  ecr.py
utils/ipa_utils/cli/: __init__.py  build.py  deploy.py  test_cmd.py
utils/ipa_utils/helpers/: output.py
utils/tests/: conftest.py  test_build_docker.py  test_deploy_cfn.py  test_deploy_cfn_delete.py  test_deploy_cfn_events.py  test_deploy_cfn_generate.py  test_deploy_cfn_list.py  test_deploy_cfn_outputs.py  test_deploy_cfn_status.py  test_deploy_cli.py  test_test_cfn_lint.py  test_test_security.py  test_test_unit.py
utils/tests/fixtures/: simple-stack.yml
(+709 files in other folders)
