[project]
name = "ipa-utils"
version = "0.1.0"
description = "IPA Execution Layer — CLI utilities for CloudFormation, Docker, and test operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "cfn-lint>=1.0.0",
]

[project.scripts]
deploy = "ipa_utils.cli.deploy:main"
build = "ipa_utils.cli.build:main"
test = "ipa_utils.cli.test_cmd:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[cloudformation,ecr,iam,sts]>=5.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipa_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
